add complete mohyla-game apix
